Bad offsets when dragging same object from asset browser multiple times, mixing Link and Append options #97320

Closed
opened 2022-04-14 10:00:05 +02:00 by Bastien Montagne · 12 comments

Affects current master (4fa3eadce9).

  • Drag (Link) an object from the asset browser into the 3DView.
  • Drag (Append (Re-use Data)) the same object, see how the linked object is moved to the same position as the last dragged one.

Frag (Append) the same object, see how each newly dragged object seems to be offset further away from its dropped (expected final) location.

Not exactly sure what is happening here, but looks like setting the location of the dragged objects is doing fairly bad things...

Affects current master (4fa3eadce9). - Drag (Link) an object from the asset browser into the 3DView. - Drag (Append (Re-use Data)) the same object, see how the linked object is moved to the same position as the last dragged one. # Frag (Append) the same object, see how each newly dragged object seems to be offset further away from its dropped (expected final) location. Not exactly sure what is happening here, but looks like setting the location of the dragged objects is doing fairly bad things...
Julian Eisel was assigned by Bastien Montagne 2022-04-14 10:00:05 +02:00
Author
Owner

Added subscriber: @mont29

Added subscriber: @mont29
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Following the policy "bug in recent feature = high prio" (feel free to lower again)

Following the policy "bug in recent feature = high prio" (feel free to lower again)
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Bastien Montagne changed title from Bad offsets when dragging same object from asset browser multiple times, nixing Link and Append options to Bad offsets when dragging same object from asset browser multiple times, mixing Link and Append options 2022-05-05 08:56:14 +02:00

This issue was referenced by 02c5ca2f22

This issue was referenced by 02c5ca2f2269b44cc56438847c55b8139a1c8dd2

This issue was referenced by 917c096be6

This issue was referenced by 917c096be6b93ce5ad1eb284d344da10000ab896
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Common Phabricator, I said "partially fixes"... Reopening.

I was hoping 917c096be6 would be enough to fix this, and indeed the offsets are gone. However the newly appended objects aren't placed under the cursor as they should be. For some reason the dropping still uses the linked instance of the ID, so the operator doesn't transform the object: https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/object/object_add.cc$3986-3990
So I guess WM_drag_get_local_ID_or_import_from_asset() returns the wrong ID.

Common Phabricator, I said "partially fixes"... Reopening. I was hoping 917c096be6 would be enough to fix this, and indeed the offsets are gone. However the newly appended objects aren't placed under the cursor as they should be. For some reason the dropping still uses the linked instance of the ID, so the operator doesn't transform the object: https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/object/object_add.cc$3986-3990 So I guess `WM_drag_get_local_ID_or_import_from_asset()` returns the wrong ID.

Added subscriber: @Lumpengnom-3

Added subscriber: @Lumpengnom-3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Alright! Bastien committed a4e7a5aa4f. With that last fix, it all seems to be working as it should now with regards to toggling between Link, Append and Append (Reuse Data).

Alright! Bastien committed a4e7a5aa4f. With that last fix, it all seems to be working as it should now with regards to toggling between *Link*, *Append* and *Append (Reuse Data)*.
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:49 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97320
No description provided.